k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stockledger-retail
  labels:
    app.kubernetes.io/name: stockledger-retail
    app.kubernetes.io/part-of: stockledger
